# binky

./: .gitignore  BENUTZERHANDBUCH.md  Binky_0.1.3_aarch64.app.tar.gz.sig  Binky_0.1.3_x64.app.tar.gz.sig  Binky_0.2.0_aarch64.app.tar.gz.sig  Binky_0.2.0_x64.app.tar.gz.sig  Binky_0.2.3_aarch64.app.tar.gz.sig  Binky_0.2.3_x64.app.tar.gz.sig  Binky_0.2.4_aarch64.app.tar.gz.sig  Binky_0.2.4_x64.app.tar.gz.sig  Binky_0.2.5_aarch64.app.tar.gz.sig  Binky_0.2.5_x64.app.tar.gz.sig  Binky_0.2.6_aarch64.app.tar.gz.sig  Binky_0.2.6_x64.app.tar.gz.sig  Binky_0.2.7_aarch64.app.tar.gz.sig  Binky_0.2.7_x64.app.tar.gz.sig  CLAUDE.md  DEPLOYMENT.md  NEXT_RELEASE.md  README.md  SCHNELLSTART.md  index.html  latest.json  package-lock.json  package.json  release.md  setup.sh  start.sh
.claude/commands/: bump.md
.claude/hooks/: post-edit-rs.sh  post-edit-ts.sh
.github/: binky-signing.key.gpg  signing.key.gpg
.github/scripts/: postinstall
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: init_db.py  main.py  requirements.txt  rss_parser.py  scrape_birds.py
docs/: auto-updater.md
frontend/: index.html
scripts/: bump-version.sh
src/: App.tsx  i18n.d.ts  i18n.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_episodes_transcripts.sql  003_diarization.sql  004_topics_enhanced.sql  005_birds_enhanced.sql  006_clear_test_bird_history.sql  007_clean_test_birds_mark_eisente.sql  008_fix_bird_history.sql  009_reset_diarization_episodes.sql  010_clean_test_birds.sql  011_utterance_text.sql  012_fts.sql  013_fix_fts_triggers.sql  014_backfill_topics_fts.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: assemblyai.rs  birds.rs  diarization.rs  episodes.rs  mod.rs  search.rs  topics.rs  transcription.rs
src-tauri/src/models/: diarization.rs  episode.rs  mod.rs  transcript.rs
src-tauri/src/state/: diarization_queue.rs  mod.rs  transcription_queue.rs
src/components/: AssemblyAIDevPanel.tsx  Layout.tsx  Sidebar.tsx  Tutorial.tsx  UpdateBanner.tsx
src/hooks/: useAnalytics.ts  useBirds.ts  useDiarization.ts  useDiarizationModel.ts  useEpisodes.ts  useModelManager.ts  useSearch.ts  useSpeakerBlocks.ts  useTopics.ts  useTranscript.ts  useTranscription.ts
src/lib/: database.ts  hostDetection.ts  settings.ts  speakerDetection.ts  updater.ts
(+45 files in other folders)
