[package]
name = "nettgefluester"
version = "0.1.0"
description = "Nettgefluster Podcast Manager"
authors = ["Nettgefluester Team"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "nettgefluester"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-fs = "2"
sentry = "0.42"
tauri-plugin-sentry = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
