[package]
name = "binky"
version = "0.1.0"
description = "Binky Podcast Manager"
authors = ["Binky Team"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "binky"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
sentry = { version = "0.42", default-features = false, features = ["backtrace", "contexts", "panic", "transport"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
