[package]
name = "binky"
version = "0.1.0"
description = "Binky Podcast Manager"
authors = ["Binky Team"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "binky"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-http = { version = "2", features = ["stream"] }
sentry = { version = "0.42", default-features = false, features = ["backtrace", "contexts", "panic", "transport"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Phase 2: Episode Management & Transcription
whisper-rs = { version = "0.15", features = ["metal"] }

# Phase 3: Speaker Analytics
sherpa-rs = { version = "0.6.8" }
rss = "2"
sha2 = "0.10"
tokio-util = { version = "0.7", features = ["rt"] }
symphonia = { version = "0.5", features = ["mp3"] }
rubato = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tokio = { version = "1", features = ["fs", "io-util", "process"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Phase 4: Content Analysis
async-openai = { version = "0.32" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
